force-app/main/default/objects/npo02__Opportunity_Rollup_Error__c/fields/npo02__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>npo02__Error_Message__c</fullName>
    <inlineHelpText>Full text of the error message</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>