force-app/main/default/objects/npo02__Opportunity_Rollup_Error__c/fields/npo02__Error_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>npo02__Error_Object_Type__c</fullName>
    <inlineHelpText>The object type to which this error refers</inlineHelpText>
    <label>Error Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>