force-app/main/default/objects/npo02__Opportunity_Rollup_Error__c/fields/npo02__Error_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>npo02__Error_Record_Link__c</fullName>
    <inlineHelpText>Link to the record on which the error occurred</inlineHelpText>
    <label>Error Record Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>